tests/fixtures/invalid/round_none.py
# Cannot call round() with None
x = round(None)
